--- a/TowerDefence/pom.xml
+++ b/TowerDefence/pom.xml
@@ -54,6 +54,12 @@
    		</dependency>
    		
    		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
+   		
+   		<dependency>
 	      <groupId>com.db4o</groupId>
 	      <artifactId>db4o-full-java5</artifactId>
 	      <version>8.0-SNAPSHOT</version>
